@@ -12,6 +12,10 @@ plone_var_path: /var/local/plone-{{ plone_major_version }}
 
 plone_instance_name: zeoserver
 
+plone_instance_home: '{{ plone_target_path }}/{{ plone_instance_name }}'
+plone_instance_var_path: '{{ plone_var_path }}/{{ plone_instance_name }}'
+plone_instance_backup_path: '{{ plone_backup_path }}/{{ plone_instance_name }}'
+
 plone_buildout_git_repo: no
 
 plone_buildout_git_version: master
